--- a/css/shop.css
+++ b/css/shop.css
@@ -220,7 +220,7 @@ top:55px;
     width: 100%;
     height: 100%;
     object-fit: cover; /* 確保圖片覆蓋整個容器 */
-    transition: transform 0.3s ease; /* 平滑的縮放過渡效果 */
+    transition: transform 0.4s ease-in-out; /* 平滑的縮放過渡效果 */
 }
 
 .item:hover .item_pic img {
