--- a/css/shop.css
+++ b/css/shop.css
@@ -114,12 +114,15 @@ section {
     align-items: center;
     justify-content: center;
     border-bottom: 2px solid var(--block_brown);
+    flex-direction: column;
 }
 
 .filter_list {
-    padding: 35px 20px 20px 20px;
+    padding: 65px 20px 20px 20px;
 }
-
+.filter_list a {
+    padding: 10px;
+}
 ul.drop-down-menu {
     display: flex;
     border-bottom: var(--block_brown);
@@ -136,11 +139,14 @@ ul.drop-down-menu ul {
     /*隱藏次選單*/
 
 }
-
+ul.drop-down-menu li{
+    width: 100%;
+    padding: 10px 2vw;
+}
 ul.drop-down-menu a {
     width: 100%;
     color: var(--text);
-    padding: 20px 5vw;
+    
 
 }
 
@@ -160,6 +166,7 @@ ul.drop-down-menu ul li {
     align-items: center;
     text-align: center;
     font-size: 1rem;
+    justify-content: center;
 
 }
 
@@ -173,15 +180,41 @@ ul.drop-down-menu li:hover>ul {
 
 
 
+.permutation {
+    position: relative;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
+    background-color: #E1CBAA;
+   
+}
+.permutation_btn{
+    width: 6vw;
+    max-width: 60px;
+}
+.permutation_btn img{
+    display: block; /* 去除底部的空白間隙 */
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 確保圖片覆蓋整個容器 */
+}
 
-
-
-
+.permutation_btn ul{
+    position: relative;
+}
+.permutation_btn ul li{
+    
+        
+        /* 只有第一層是靠左對齊*/
+        /* text-align: left; */
+    
+}
 
 
 
 .items_list {
-    padding: 50px 5vw;
+    padding: 100px 5vw 50px;
     width: 100%;
     max-width: 1440px;
     /* ;list通常最大寬度是絕對搭配相對單位,設定絕對單位] */
