--- a/css/shop.css
+++ b/css/shop.css
@@ -119,15 +119,16 @@ section {
 
 /* 篩選列 */
 .filter_list {
-    padding: 65px 20px 20px 20px;
+    padding: 65px 20px 10px 20px;
 }
 
 .filter_list a {
-
+ 
     color: var(--text);
 }
 .drop-down-menu>li>a{
-    padding: 2vw;
+    padding: 0 4vw;
+      ;
 }
 
 .drop-down-menu {
@@ -138,16 +139,25 @@ section {
     
 }
 
+#festivalList,#countsList,#priceList,#permutationList {
+    display: none; /* 或者使用 inline 或 block 等初始状态 */
+}
+
 ul.drop-down-menu ul {
     /* border-bottom: #ccc 1px solid; */
     position: absolute;
-    top:65px;
+    top:78px;
     z-index: 99;
     background-color: white;
     border: 2px solid var(--block_brown);
     /*隱藏次選單*/
-    display: none;
+    /* display: none; */
+    padding: 10px;
 }
+/* ul.drop-down-menu li:hover>ul {
+    display: block;
+} */
+
 
 
 
@@ -158,24 +168,25 @@ ul.drop-down-menu>li {
     align-items: center;
     text-align: center;
     font-size: 1rem;
-    
-    padding: 0 2vw;
     width: 100%;
+    padding: 3vw;
 
 }
 
 ul.drop-down-menu ul li:hover {
-    background-color: #E1CBAA;
+    background-color: #E1CBAA ;
+    opacity: 0.7;
 }
 
-ul.drop-down-menu li:hover>ul {
-    display: block;
-}
+
 ul.drop-down-menu>li li{
-    padding: 5px 15px ;
+    width: 8vw;
+    min-width: 85px;
+    padding: 10px ;
 }
-
-
+ul.drop-down-menu>li li>a{
+border-bottom:var(--block_brown) solid 2px
+}
 /* 排序按鈕 */
 
 .permutation {
