--- a/css/shop.css
+++ b/css/shop.css
@@ -122,13 +122,13 @@ section {
     padding: 65px 20px 10px 20px;
 }
 
-.filter_list a {
- 
-    color: var(--text);
+.BtnPic{
+width: 10vw;
+max-width:100px ;
 }
 .drop-down-menu>li>a{
     padding: 0 4vw;
-      ;
+      
 }
 
 .drop-down-menu {
