--- a/css/Q&A.css
+++ b/css/Q&A.css
@@ -82,18 +82,19 @@ section {
     flex-direction: column;
     align-items: center;
     align-content: center;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     width: 100vw;
     /* RWD語法 */
     /* 用vh 不要用vw不好控制 */
-    padding: 80px;
+    padding: 10vw;
 
 }
 
 
 .QAbox{
     height: 100vh; 
-    width: 90vw;
+    width: 90%;
     display: flex;
     /* flex-direction: column; */
     background-color: #ffa61f;
@@ -120,16 +121,25 @@ section {
     font-weight: bold;
     border-bottom: var(--block_brown) solid 3px ;
     padding:18px 10px 0 0 ;
+
 }
+
 .question:hover{
     color: var(--block_brown);
     cursor: pointer;
     transition: 0.3s ease-in-out;
 }
 
-.question a { display: flex;
-    align-items: center;
+.question a { 
     
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content:space-between;
+    
+}
+.q_part{
+    display: flex;
 }
 .pinkball{
     width: 0.8rem;         /* 圆形的直径 */
@@ -141,16 +151,27 @@ section {
 .ballwrap{
     padding: 0 12px 0 0 ;
 }
+.vector {
+    width: 30px;
+    height: 20px;
+    background-image: url(../images/Q&A_images/down_vector.svg);
+    transition:  0.6s ease-in-out; /* 展开和收起的过渡效果 */
+}
+.vector.expanded_vec {
+    width: 30px;
+    height: 20px;
+    background-image: url(../images/Q&A_images/up_vector.svg);
+    
+}
 
 .ans{
     font-size: 0.9rem;
     color: #6B3B20;
     font-weight: bold;
-    
 
     max-height: 0; /* 初始状态 */
     overflow: hidden;
-    transition: max-height 0.3s ease-in-out; /* 展开和收起的过渡效果 */
+    transition:  0.5s ease-in-out; /* 展开和收起的过渡效果 */
 }
 .ans.expanded {
     max-height: 500px; /* 设置为一个比内容实际高度大的值 */
