--- a/css/Customization.css
+++ b/css/Customization.css
@@ -89,16 +89,24 @@ body {
     margin-top: 29px;
 }
 
+#menu_id_menu {
+    display: flex;
+    align-items: center;
+}
 
 
 #menu_id a {
-    margin: 0 24px;
+    margin-right: 32px;
     color: #6B3B20;
     font-size: 20px;
 }
 
 #menu_id li a:hover {
     color: #F1BFC1;
+}
+
+#menu_id_menu_icon {
+    margin-right: 4px;
 }
 
 #customized {
@@ -116,6 +124,19 @@ body {
     background-color: #3F1A09;
 }
 
+#menu_id_icon {
+    display: flex;
+    align-items: center;
+}
+
+#menu_id_icon a {
+    margin: 0;
+}
+
+#menu_id_icon_show {
+    margin: 0 23px;
+}
+
 /* ↑↑標籤列↑↑ */
 
 /* ↓↓左邊側邊欄位↓↓ */
@@ -126,16 +147,18 @@ body {
     position: relative;
 }
 
+
 #left_sidebar_btn1.show {
     background-image: url(../images/Custom_block/background.svg);
 }
 
 #left_sidebar_ul {
     /* margin-left: 2px; */
+    padding: 10px 0;
 }
 
 #left_sidebar_ul li {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     display: flex;
     /* justify-content: center; */
     /* align-items: center; */
@@ -206,6 +229,10 @@ body {
     margin-bottom: 30px;
     color: #6B3B20;
 
+}
+
+.left_menu img{
+    /* background-color: #444; */
 }
 
 
@@ -386,7 +413,7 @@ body {
     left: 68px;
     display: none;
     z-index: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .left_menu4_p {
@@ -615,11 +642,15 @@ body {
     top: 90px;
     left: 180px;
     width: 150px;
-    height: 350px;
+    height: auto;
+    /* height: 100%; */
+    /* height: 350px; */
+    /* width: 100%; */
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
+    margin: 0;
 }
 
 #middle_div1_box_div1,
@@ -627,15 +658,27 @@ body {
 #middle_div1_box_div3,
 #middle_div1_box_div4,
 #middle_div1_box_div5,
-#middle_div1_box_div6 {
-    width: 75px;
-    height: 115px;
+#middle_div1_box_div6,
+#middle_div1_box_div7,
+#middle_div1_box_div8,
+#middle_div1_box_div9,
+#middle_div1_box_div10,
+#middle_div1_box_div11,
+#middle_div1_box_div12,
+#middle_div1_box_div13,
+#middle_div1_box_div14,
+#middle_div1_box_div15 {
+    width: 50px;
+    height: 70px;
     border: 0px solid yellow;
+    /* border-style: dotted;
+    border-color: rgba(255, 0, 0, 0.5); */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     gap: 0;
+    /* overflow: hidden; */
 }
 
 #middle_div1_box_div1 img,
@@ -1137,7 +1180,7 @@ body {
     left: 0;
     top: 0;
     background-image: url(../images/Custom_block/background.svg);
-    /* display: none; */
+    display: none;
     z-index: 1;
 }
 
@@ -1643,7 +1686,7 @@ body {
     top: 0;
     margin-left: 50px;
     z-index: 1;
-    /* display: none; */
+    display: none;
 }
 
 #left_sidebar_four_page_div3_div1_p1 {
