--- a/css/Q&A.css
+++ b/css/Q&A.css
@@ -84,28 +84,22 @@ section {
     align-content: center;
     height: 100%;
     min-height: 100vh;
-    width: 100vw;
+    /* width: 100%; */
     /* RWD語法 */
     /* 用vh 不要用vw不好控制 */
-    padding: 10vw;
-
+    background-color: #E1CBAA;
 }
 
 
-.QAbox{
+/* .QAbox{
     height: 100vh; 
-    width: 90%;
     display: flex;
-    /* flex-direction: column; */
-    background-color: #ffa61f;
-    padding:100px;
-    margin: 20px;
-    border:var(--block_brown)  solid 3px ;
-    
-}
+    background-color: #ffa61f;    
+} */
 
 .per_qna_block{
-    width: 80vw;
+
+    max-width: 900px;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -129,9 +123,7 @@ section {
     cursor: pointer;
     transition: 0.3s ease-in-out;
 }
-
-.question a { 
-    
+.question a {    
     display: flex;
     align-items: center;
     align-content: center;
@@ -146,7 +138,6 @@ section {
     height: 0.8rem;        /* 圆形的直径 */
     border-radius: 50%; /* 使元素的边角圆润，形成圆形 */
     background-color: var(--primary_pink); /* 圆形的背景色，可以根据需要调整 */
-
 }
 .ballwrap{
     padding: 0 12px 0 0 ;
@@ -154,8 +145,14 @@ section {
 .vector {
     width: 30px;
     height: 20px;
+    margin-bottom:10p ;
     background-image: url(../images/Q&A_images/down_vector.svg);
-    transition:  0.6s ease-in-out; /* 展开和收起的过渡效果 */
+    transition:  0.4s ease-in-out; 
+    background-position: center;
+    /* 置中背景圖片 */
+    background-size: cover;
+    /* 背景圖片填滿整個元素 */
+    background-repeat: no-repeat;/
 }
 .vector.expanded_vec {
     width: 30px;
@@ -186,22 +183,23 @@ footer {
     display: none;
     width: 100%;
     background-image: url(../images/foot--bg.svg);
-    height: 20vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 
 }
 
 footer .wrap {
-    width: 80vw;
+    width: 90vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.bottom_nav {
+footer .bottom_nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -213,18 +211,18 @@ footer .logo {
     width: 120px;
 }
 
-.bottom_nav .menu {
+footer .bottom_nav .menu {
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 0.8rem;
 }
 
-.bottom_nav .menu li {
+footer .bottom_nav .menu li {
     padding: 1.2vw;
 }
 
-.icon {
+footer .icon {
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -234,14 +232,14 @@ footer .logo {
 
 }
 
-.icon a {
+ footer .icon a {
     width: 30px;
     height: 30px;
 
 
 }
 
-.icon .fb {
+footer .icon .fb {
     background-image: url(../images/footer_icon_fb.svg);
     background-position: center;
     /* 置中背景圖片 */
@@ -274,6 +272,3 @@ footer .logo {
     padding: 20px 0;
 }
 
-iframe {
-    width: 100%;
-}
