0821-Chocolate_custom_screen3

--- a/css/Customization.css
+++ b/css/Customization.css
@@ -134,7 +134,7 @@ body {
 }
 
 #menu_id_icon_show {
-    margin: 0 23px;
+    margin: 0 20px;
 }
 
 /* ↑↑標籤列↑↑ */
@@ -254,7 +254,7 @@ body {
 }
 
 .left_menu2_div2 {
-    margin-top: 10px;
+    margin-top: 41px;
 }
 
 .left_menu2_p {
@@ -268,9 +268,15 @@ body {
     margin-top: 30px;
 }
 
+.left_menu2_div2 div {
+    margin-bottom: 16px;
+}
+
 .left_menu2_div1_p {
-    margin-left: 20px;
-    justify-content: end;
+    /* margin-left: 20px; */
+    display: flex;
+    justify-content: center;
+    margin-bottom: 7px;
 }
 
 .left_menu2_div1 ul {
@@ -492,11 +498,14 @@ body {
     font-size: 15px;
 }
 
+
 .left_menu4_img a {
-    padding: 10px 10px;
+    padding: 0px 10px;
     /* margin-right: 20px; */
     /* padding: 0 20px 30px 20px; */
     /* padding-bottom: 30px; */
+    width: 102px;
+    height: 89px;
 }
 
 .left_menu4_img {
@@ -505,7 +514,7 @@ body {
     justify-content: center;
     /* margin: 20px 30px; */
     flex-wrap: wrap;
-
+    align-items: center;
 }
 
 #left_menu4_hr {
@@ -538,15 +547,23 @@ body {
 
 }
 
-.left_menu4_img {
+.left_menu5_img {
     display: flex;
     justify-content: center;
-
+    flex-wrap: wrap;
+    padding: 0 33px;
 }
 
-.left_menu4_img img {
-    width: 81px;
-    height: 81px;
+.left_menu5_img img {
+    width: 133px;
+    height: 130px;
+    margin-bottom: 16px;
+}
+
+#left_menu5_img_a1,
+#left_menu5_img_a3,
+#left_menu5_img_a5 {
+    margin-right: 9px;
 }
 
 
@@ -670,7 +687,8 @@ body {
 #middle_div1_box_div15 {
     width: 50px;
     height: 70px;
-    border: 0px solid yellow;
+    border: 0px dotted yellow;
+    /* border-style: dotted; */
     /* border-style: dotted;
     border-color: rgba(255, 0, 0, 0.5); */
     display: flex;
@@ -687,7 +705,7 @@ body {
 #middle_div1_box_div4 img,
 #middle_div1_box_div5 img,
 #middle_div1_box_div6 img {
-    margin: -15px;
+    margin: -10px;
 }
 
 
@@ -748,6 +766,32 @@ body {
 }
 
 .middle_img7 {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+
+.middle_img8 {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+
+
+.middle_img9 {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+
+
+.middle_img10 {
     width: 500px;
     height: 500px;
     display: flex;
