換問題內容

--- a/css/Q&A.css
+++ b/css/Q&A.css
@@ -109,7 +109,7 @@ section {
     border-radius: 15px 15px 0 0 ;
     cursor: pointer;
 }
-.qType .q1_btn {
+.qType .btn_type1 {
     margin-left: 0 ;
   
 }
@@ -129,7 +129,7 @@ padding: 20px;
 
 }
 
-#root {
+.QAwrap {
     /* position: absolute;
     top:-50%;
     left:-50%; */
